SERVER-51120 Find queries with MERGE_SORT incorrectly sort the results when the collation is specified

(cherry picked from commit eee7fb8f2c6da144e9d4c3df7887a5ec167f3a6f)